                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 09-01-2004 updated: Greek language file (Thnx to modon)
  - 09-01-2005 fixed: fullscreen video view mode info, soften setting for video was not displayed
  - 09-01-2005 updated: Chinese (Traditional) language file (Thnx to iikii)
  - 09-01-2005 updated: Chinese (Simple) language file (Thnx to iikii)
  - 09-01-2005 fixed: Pathes in progress dialog where not correctly shortened
  - 09-01-2005 changed: minor GUIThumbnailPanel performance tweaks
  - 09-01-2005 fixed: scanning smb shares the second time doesn't show the add/rescan dialog
  - 09-01-2005 fixed: audio skips once on startup of videos
  - 09-01-2005 fixed [ 1090730 ] Playback Of MP3 Files With @
  - 08-01-2005 fixed: playlist windows, current playing item disappears after using the context menu in it
  - 08-01-2005 changed: video/music info, smoother update of icons after getting information
  - 08-01-2005 fixed: thumb cache was not cleared
  - 08-01-2005 changed: minor GUIListControl performance tweaks
  - 08-01-2005 changed: minor guiImage & xprfont performance tweaks
  - 07-01-2005 changed: Removed TITLE mapping to playlist view in My Music and My Videos - it's on the context menu anyway.
  - 07-01-2005 changed: cdrip encoders moved into dll's, this should result in a smaller executable
                        and a bit faster cd ripping (don't forget to copy the new system folder!)
  - 07-01-2005 fixed: music playlist, all cue items show the tag info of the first file 
  - 07-01-2005 updated: Spanish language file (Thnx to anghlar)
  - 07-01-2005 updated: Italian language file (Thnx to kotix)